--- a/css/main.css
+++ b/css/main.css
@@ -53,8 +53,8 @@ body {
   width: 100%;
   height: 80vh;
   position: relative;
-  background: url(/images/bg-curvy-mobile.svg), -webkit-gradient(linear, left top, left bottom, color-stop(57%, #1c2431), color-stop(50%, #181f2a));
-  background: url(/images/bg-curvy-mobile.svg), linear-gradient(to bottom, #1c2431 57%, #181f2a 50%);
+  background: url(/images/bg-curvy-mobile.svg), -webkit-gradient(linear, left top, left bottom, color-stop(59%, #1c2431), color-stop(50%, #181f2a));
+  background: url(/images/bg-curvy-mobile.svg), linear-gradient(to bottom, #1c2431 59%, #181f2a 50%);
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -75,8 +75,7 @@ body {
 }
 
 .intro .logo {
-  width: 100%;
-  max-width: 10rem;
+  width: 8.5rem;
 }
 
 .intro .logo img {
@@ -172,6 +171,6 @@ body {
   background: linear-gradient(to right, #65e2d9 -50%, #339ecc);
   color: currentColor;
   letter-spacing: 0.5px;
-  width: 60%;
+  width: 55%;
 }
 /*# sourceMappingURL=main.css.map */
