--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -10,7 +10,7 @@
   background: url(/images/bg-curvy-mobile.svg),
     linear-gradient(
       to bottom,
-      $color-primary-dark-blue-1 57%,
+      $color-primary-dark-blue-1 59%,
       $color-primary-dark-blue-2 50%
     );
   background-repeat: no-repeat;
@@ -32,8 +32,7 @@
   }
 
   .logo {
-    width: 100%;
-    max-width: 10rem;
+    width: 8.5rem;
 
     img {
       @include imgDefault;
