--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -11,7 +11,16 @@
     $color-accent-cyan -50%,
     $color-accent-blue
   );
+  background-position: right;
+  background-size: 200% 100%;
   color: currentColor;
   letter-spacing: 0.5px;
   width: 55%;
+  transition: background-position 0.4s ease-out;
+
+  &:hover {
+    @media (hover: hover) {
+      background-position: left;
+    }
+  }
 }
