--- a/css/main.css
+++ b/css/main.css
@@ -51,10 +51,10 @@ body {
           flex-direction: column;
   background-color: #1c2431;
   width: 100%;
-  height: 80vh;
+  height: 100vh;
   position: relative;
-  background: url(/images/bg-curvy-mobile.svg), -webkit-gradient(linear, left top, left bottom, color-stop(59%, #1c2431), color-stop(50%, #181f2a));
-  background: url(/images/bg-curvy-mobile.svg), linear-gradient(to bottom, #1c2431 59%, #181f2a 50%);
+  background: url(/images/bg-curvy-mobile.svg), -webkit-gradient(linear, left top, left bottom, color-stop(58%, #1c2431), color-stop(50%, #181f2a));
+  background: url(/images/bg-curvy-mobile.svg), linear-gradient(to bottom, #1c2431 58%, #181f2a 50%);
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -169,8 +169,18 @@ body {
   border-radius: 3rem;
   background: -webkit-gradient(linear, left top, right top, color-stop(-50%, #65e2d9), to(#339ecc));
   background: linear-gradient(to right, #65e2d9 -50%, #339ecc);
+  background-position: right;
+  background-size: 200% 100%;
   color: currentColor;
   letter-spacing: 0.5px;
   width: 55%;
+  -webkit-transition: background-position 0.4s ease-out;
+  transition: background-position 0.4s ease-out;
+}
+
+@media (hover: hover) {
+  .cta:hover {
+    background-position: left;
+  }
 }
 /*# sourceMappingURL=main.css.map */
