--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -41,7 +41,7 @@
 
   &__illustration {
     width: 80%;
-    transform: translateY(10%);
+    transform: translateY(12%);
 
     img {
       @include imgDefault;
@@ -69,6 +69,9 @@
 }
 
 // main
+.main {
+  padding: 0 2rem;
+}
 
 // footer
 .attribution {
