--- a/scss/sections/_perks.scss
+++ b/scss/sections/_perks.scss
@@ -11,12 +11,17 @@
   }
 
   &__icon {
-    margin-bottom: 2.5rem;
+    width: 7.5rem;
+    margin: 0 auto;
+
+    img {
+      @include imgDefault;
+    }
   }
 
   &__title {
     font-size: 1.8rem;
-    margin-bottom: 1.2rem;
+    margin: 3rem 0 1.2rem;
   }
 
   &__description {
