--- a/css/main.css
+++ b/css/main.css
@@ -313,4 +313,87 @@ body {
 .pledge__see-more svg {
   margin-left: 0.75rem;
 }
+
+.testimonials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  min-height: 100vh;
+}
+
+.testimonials__item {
+  background-color: #202a3c;
+  border-radius: 3px;
+  padding: 2.5rem;
+}
+
+.testimonials__item:first-child {
+  position: relative;
+}
+
+.testimonials__item:first-child::before {
+  content: '"';
+  color: #65e2d9;
+  position: absolute;
+  left: 0;
+  top: -0;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+}
+
+.testimonials__item:not(:last-child) {
+  margin-bottom: 2rem;
+}
+
+.testimonials__msg {
+  font-size: 1.25rem;
+  line-height: 1.6;
+  margin-bottom: 2rem;
+}
+
+.author {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 13% auto;
+      grid-template-columns: 13% auto;
+  -ms-grid-rows: (auto)[2];
+      grid-template-rows: repeat(2, auto);
+  -webkit-column-gap: 1rem;
+          column-gap: 1rem;
+}
+
+.author__img {
+  width: 100%;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  grid-row: 1/-1;
+}
+
+.author__img img {
+  width: 100%;
+  height: auto;
+  display: block;
+  border-radius: 50%;
+}
+
+.author__name {
+  font-size: 1.3rem;
+  letter-spacing: 0.5px;
+}
+
+.author__title {
+  font-size: 1rem;
+  font-weight: 400;
+}
 /*# sourceMappingURL=main.css.map */
