--- a/scss/sections/_testimonials.scss
+++ b/scss/sections/_testimonials.scss
@@ -14,6 +14,7 @@
     background-color: $color-primary-dark-blue-4;
     border-radius: 3px;
     padding: 2.5rem;
+    box-shadow: 0 0 0.6rem 0 rgba($color-neutral-white, 0.035);
   }
 
   &__msg {
