--- a/scss/sections/_sign-up.scss
+++ b/scss/sections/_sign-up.scss
@@ -4,6 +4,7 @@
   padding: 3.5rem 2.5rem;
   text-align: center;
   box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.25);
+  transform: translateY(50%);
 
   &__heading {
     margin-bottom: 2rem;
