--- a/css/main.css
+++ b/css/main.css
@@ -32,8 +32,20 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 375px;
+  width: 100%;
   margin: 0 auto;
+}
+
+@media only screen and (min-width: 375px) {
+  body {
+    max-width: 600px;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  body {
+    max-width: unset;
+  }
 }
 
 .logo {
@@ -63,11 +75,20 @@ body {
   background-color: #1c2431;
   width: 100%;
   height: 100vh;
-  position: relative;
   background: url(/images/bg-curvy-mobile.svg), -webkit-gradient(linear, left top, left bottom, color-stop(58%, #1c2431), color-stop(50%, #181f2a));
   background: url(/images/bg-curvy-mobile.svg), linear-gradient(to bottom, #1c2431 58%, #181f2a 50%);
   background-repeat: no-repeat;
   background-position: center;
+  background-size: contain;
+}
+
+@media only screen and (min-width: 600px) {
+  .intro {
+    background: url(/images/bg-curvy-desktop.svg), #1c2431;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: 100%;
+  }
 }
 
 .intro .nav {
@@ -89,10 +110,23 @@ body {
   max-width: 8.5rem;
 }
 
+.intro .intro-container {
+  position: relative;
+  width: 100%;
+  text-align: center;
+}
+
+@media only screen and (min-width: 600px) {
+  .intro .intro-container {
+    max-width: 600px;
+  }
+}
+
 .intro__illustration {
   width: 80%;
   -webkit-transform: translateY(12%);
           transform: translateY(12%);
+  margin: 0 auto;
 }
 
 .intro__illustration img {
@@ -123,6 +157,12 @@ body {
 .main {
   padding: 0 2rem;
   position: relative;
+}
+
+@media only screen and (min-width: 600px) {
+  .main {
+    max-width: 90rem;
+  }
 }
 
 .footer {
@@ -296,10 +336,18 @@ body {
 .perks__list {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(33rem, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(33rem, 1fr));
-  grid-gap: 7rem;
+  -ms-grid-columns: (minmax(26rem, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(26rem, 1fr));
+  gap: 7rem;
   text-align: center;
+}
+
+@media only screen and (min-width: 600px) {
+  .perks__list {
+    -webkit-column-gap: 5rem;
+            column-gap: 5rem;
+    row-gap: 7rem;
+  }
 }
 
 .perks__item {
@@ -312,8 +360,9 @@ body {
 }
 
 .perks__icon img {
-  width: 100%;
-  height: auto;
+  height: 100%;
+  max-height: 7.5rem;
+  width: auto;
   display: block;
 }
 
@@ -344,9 +393,32 @@ body {
   margin: auto 1rem;
 }
 
+@media only screen and (min-width: 768px) {
+  .pledge {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-column-gap: 3rem;
+            column-gap: 3rem;
+    height: unset;
+    margin: 13rem auto;
+  }
+}
+
 .pledge__illustration {
   width: 100%;
+  max-width: 40rem;
   margin-bottom: 5rem;
+}
+
+@media only screen and (min-width: 768px) {
+  .pledge__illustration {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    margin-bottom: unset;
+  }
 }
 
 .pledge__illustration img {
@@ -369,6 +441,17 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+@media only screen and (min-width: 768px) {
+  .pledge__container {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+  }
 }
 
 .pledge__title {
@@ -398,8 +481,6 @@ body {
   flex-direction: row;
   padding-bottom: 0.5rem;
   border-bottom: 1px solid currentColor;
-  -ms-flex-item-align: start;
-      align-self: flex-start;
 }
 
 .pledge__see-more:link, .pledge__see-more:visited {
