--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -10,3 +10,31 @@
   height: auto;
   display: block;
 }
+
+@mixin breakpoint($bp) {
+  @if $bp == xs {
+    @media only screen and (min-width: $bp-xs) {
+      @content;
+    }
+  }
+  @if $bp == sm {
+    @media only screen and (min-width: $bp-sm) {
+      @content;
+    }
+  }
+  @if $bp == md {
+    @media only screen and (min-width: $bp-md) {
+      @content;
+    }
+  }
+  @if $bp == lg {
+    @media only screen and (min-width: $bp-lg) {
+      @content;
+    }
+  }
+  @if $bp == xl {
+    @media only screen and (min-width: $bp-xl) {
+      @content;
+    }
+  }
+}
