--- a/css/main.css
+++ b/css/main.css
@@ -168,10 +168,12 @@ body {
 .footer {
   background-color: #0b1523;
   padding: 23rem 2rem 2rem;
+  width: 100%;
 }
 
 .footer .logo {
-  max-width: 50%;
+  width: 50%;
+  max-width: 20rem;
   margin-bottom: 3rem;
 }
 
@@ -182,8 +184,8 @@ body {
 .footer__list--info .footer__item {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 12% auto;
-      grid-template-columns: 12% auto;
+  -ms-grid-columns: 4rem auto;
+      grid-template-columns: 4rem auto;
 }
 
 .footer__list--info .footer__item:not(:last-child) {
@@ -268,6 +270,10 @@ body {
 .footer .attribution {
   font-size: 11px;
   text-align: center;
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
 
 .footer .attribution a {
@@ -399,8 +405,6 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    -webkit-column-gap: 3rem;
-            column-gap: 3rem;
     height: unset;
     margin: 13rem auto;
   }
@@ -418,6 +422,7 @@ body {
         -ms-flex: 1;
             flex: 1;
     margin-bottom: unset;
+    margin-right: 3rem;
   }
 }
 
@@ -501,7 +506,9 @@ body {
   margin-left: 0.75rem;
 }
 
-.testimonials {
+.testimonials__list {
+  width: 90%;
+  max-width: 40rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -515,14 +522,34 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  margin: 0 auto;
+  position: relative;
 }
 
-.testimonials__list {
-  width: 90%;
+@media only screen and (min-width: 600px) {
+  .testimonials__list {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    width: 100%;
+    max-width: unset;
+  }
+}
+
+.testimonials__list > * {
+  width: 100%;
 }
 
 .testimonials__list > *:not(:last-child) {
   margin-bottom: 2rem;
+}
+
+@media only screen and (min-width: 600px) {
+  .testimonials__list > *:not(:last-child) {
+    margin-bottom: unset;
+    margin-right: 2rem;
+  }
 }
 
 .testimonials__item {
@@ -531,6 +558,7 @@ body {
   padding: 2.5rem;
   -webkit-box-shadow: 0 0 0.6rem 0 rgba(255, 255, 255, 0.035);
           box-shadow: 0 0 0.6rem 0 rgba(255, 255, 255, 0.035);
+  z-index: 2;
 }
 
 .testimonials__msg {
@@ -542,8 +570,8 @@ body {
 .author {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 13% auto;
-      grid-template-columns: 13% auto;
+  -ms-grid-columns: 3.25rem auto;
+      grid-template-columns: 3.25rem auto;
   -ms-grid-rows: (auto)[2];
       grid-template-rows: repeat(2, auto);
   -webkit-column-gap: 1rem;
@@ -579,8 +607,20 @@ body {
   width: 2.5rem;
   height: auto;
   display: block;
-  -webkit-transform: translateX(25%);
-          transform: translateX(25%);
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-transform: translate(25%, -100%);
+          transform: translate(25%, -100%);
+}
+
+@media only screen and (min-width: 600px) {
+  .bg-quotes {
+    width: 3.5rem;
+    -webkit-transform: translate(-15%, -75%);
+            transform: translate(-15%, -75%);
+    z-index: 1;
+  }
 }
 
 .sign-up {
@@ -594,6 +634,13 @@ body {
           transform: translateY(50%);
 }
 
+@media only screen and (min-width: 600px) {
+  .sign-up {
+    max-width: 80%;
+    margin: 0 auto;
+  }
+}
+
 .sign-up__heading {
   margin-bottom: 2rem;
 }
@@ -603,9 +650,37 @@ body {
   margin-bottom: 2rem;
 }
 
+@media only screen and (min-width: 768px) {
+  .sign-up__form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    flex-direction: row;
+  }
+}
+
 .sign-up__input,
 .sign-up .cta {
   width: 100%;
+}
+
+@media only screen and (min-width: 768px) {
+  .sign-up__input,
+  .sign-up .cta {
+    -webkit-box-flex: 1.5;
+        -ms-flex: 1.5;
+            flex: 1.5;
+  }
 }
 
 .sign-up__input {
@@ -615,6 +690,16 @@ body {
   margin-bottom: 2rem;
   padding: 1.5rem 3rem;
   border-radius: 3rem;
+}
+
+@media only screen and (min-width: 768px) {
+  .sign-up__input {
+    margin-bottom: unset;
+    -webkit-box-flex: 3;
+        -ms-flex: 3;
+            flex: 3;
+    margin-right: 2rem;
+  }
 }
 
 .sign-up__input::-webkit-input-placeholder {
