--- a/scss/sections/_pledge.scss
+++ b/scss/sections/_pledge.scss
@@ -5,7 +5,7 @@
 
   @include breakpoint(md) {
     flex-direction: row;
-    column-gap: 3rem;
+    // column-gap: 3rem;
     height: unset;
     margin: 13rem auto;
   }
@@ -18,6 +18,7 @@
     @include breakpoint(md) {
       flex: 1;
       margin-bottom: unset;
+      margin-right: 3rem;
     }
 
     img {
