--- a/scss/sections/_testimonials.scss
+++ b/scss/sections/_testimonials.scss
@@ -1,12 +1,29 @@
 .testimonials {
-  @include flexCenter;
-  // min-height: 100vh;
-
   &__list {
     width: 90%;
+    max-width: 40rem;
+    @include flexCenter;
+    margin: 0 auto;
+    position: relative;
+
+    @include breakpoint(sm) {
+      flex-direction: row;
+      width: 100%;
+      max-width: unset;
+      // column-gap: 2rem;
+    }
+
+    & > * {
+      width: 100%;
+    }
 
     & > *:not(:last-child) {
       margin-bottom: 2rem;
+
+      @include breakpoint(sm) {
+        margin-bottom: unset;
+        margin-right: 2rem;
+      }
     }
   }
 
@@ -15,6 +32,7 @@
     border-radius: 3px;
     padding: 2.5rem;
     box-shadow: 0 0 0.6rem 0 rgba($color-neutral-white, 0.035);
+    z-index: 2;
   }
 
   &__msg {
@@ -29,7 +47,7 @@
 
 .author {
   display: grid;
-  grid-template-columns: 13% auto;
+  grid-template-columns: 3.25rem auto;
   grid-template-rows: repeat(2, auto);
   column-gap: 1rem;
   // row-gap: 0.5rem;
@@ -56,12 +74,18 @@
   }
 }
 
-.bg-quotes-container {
-}
-
 .bg-quotes {
   width: 2.5rem;
   height: auto;
   display: block;
-  transform: translateX(25%);
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translate(25%, -100%);
+
+  @include breakpoint(sm) {
+    width: 3.5rem;
+    transform: translate(-15%, -75%);
+    z-index: 1;
+  }
 }
