--- a/css/main.css
+++ b/css/main.css
@@ -140,7 +140,7 @@ body {
 }
 
 .intro__heading--main {
-  font-size: 2.5rem;
+  font-size: clamp(2.5rem, 5vw, 3.2rem);
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   line-height: 1.4;
@@ -205,9 +205,12 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 768px) {
   .footer .footer-container {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -216,21 +219,22 @@ body {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
     margin-bottom: 5rem;
   }
 }
 
 .footer__list--info {
   width: 100%;
+  max-width: 50rem;
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 768px) {
   .footer__list--info {
     width: unset;
     max-width: 36rem;
+    -webkit-box-flex: 3;
+        -ms-flex: 3;
+            flex: 3;
   }
 }
 
@@ -240,6 +244,12 @@ body {
   -ms-grid-columns: 4rem auto;
       grid-template-columns: 4rem auto;
   margin-bottom: 3rem;
+}
+
+@media only screen and (min-width: 768px) {
+  .footer__list--info .footer__item {
+    padding-right: 2rem;
+  }
 }
 
 .footer__list--info .footer__item:not(:last-child) {
@@ -273,7 +283,7 @@ body {
   margin: 8rem auto 2rem;
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 768px) {
   .footer__list--socials {
     margin: unset;
   }
@@ -313,9 +323,12 @@ body {
   width: 100%;
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 768px) {
   .footer .nav {
     width: unset;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
   }
 }
 
@@ -330,7 +343,7 @@ body {
   margin-top: 5rem;
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 768px) {
   .footer .nav__list {
     margin-top: unset;
   }
@@ -355,6 +368,7 @@ body {
 }
 
 .nav {
+  max-width: 1200px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -496,7 +510,7 @@ body {
         -ms-flex: 1;
             flex: 1;
     margin-bottom: unset;
-    margin-right: 3rem;
+    margin-right: 5rem;
   }
 }
 
@@ -534,7 +548,7 @@ body {
 }
 
 .pledge__title {
-  font-size: 1.8rem;
+  font-size: clamp(1.8rem, 5vw, 2.9rem);
   margin-bottom: 2rem;
 }
 
