--- a/scss/sections/_pledge.scss
+++ b/scss/sections/_pledge.scss
@@ -18,7 +18,7 @@
     @include breakpoint(md) {
       flex: 1;
       margin-bottom: unset;
-      margin-right: 3rem;
+      margin-right: 5rem;
     }
 
     img {
@@ -36,7 +36,7 @@
   }
 
   &__title {
-    font-size: 1.8rem;
+    font-size: clamp(1.8rem, 5vw, 2.9rem);
     margin-bottom: 2rem;
   }
 
