--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -9,6 +9,7 @@ $color-accent-blue: hsl(198, 60%, 50%); // inside call-to-action gradient
 $color-accent-light-red: hsl(0, 100%, 63%); // error
 
 $color-neutral-white: hsl(0, 0%, 100%);
+$color-neutral-white-text: rgba($color-neutral-white, 0.8);
 
 // FONT
 $font-default: 'Open Sans', sans-serif; // body
